# lab3_venkey_ravuri

./: LICENSE  README.md  pyproject.toml  train.py
UNKNOWN.egg-info/: SOURCES.txt
app/: main.py
app/data/: model.json  model_info.json
penguins_classifier.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
